FIX: thead z-index too hig

--- a/src/tables.scss
+++ b/src/tables.scss
@@ -36,7 +36,7 @@ table {
     text-transform: capitalize;
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 5;
   }
 
   tbody {
